--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right, rgba(148, 143, 143, 0), rgb(250, 250, 250))
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.user-logged {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.texto-final {
+  font-size: large;
+}
+
+.button {
+  background-color: rgb(255, 255, 255);
 }
